{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 40,
  "lineage": "8cbd1f48-cb66-bdc2-2236-8a0e049e9bbf",
  "resources": [
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0758901dc46540639",
            "owner_id": "305496103131",
            "tags": {
              "Name": "custom-igw"
            },
            "vpc_id": "vpc-0329d21fe18e1637e"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05b1fd11a7e4430a6",
            "owner_id": "305496103131",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-RT"
            },
            "vpc_id": "vpc-0329d21fe18e1637e"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d27c2c64776a14cd",
            "owner_id": "305496103131",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0758901dc46540639",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-RT"
            },
            "vpc_id": "vpc-0329d21fe18e1637e"
          },
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.internet_gateway-rt",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02610ede2a1ce2d69",
            "route_table_id": "rtb-05b1fd11a7e4430a6",
            "subnet_id": "subnet-007cf815deeeec4a7"
          },
          "dependencies": [
            "module.dev_vpc.aws_route_table.private-rt",
            "module.dev_vpc.aws_subnet.private-sn",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c6f1e00f2956d47",
            "route_table_id": "rtb-0d27c2c64776a14cd",
            "subnet_id": "subnet-0543f3f2ddcb1804a"
          },
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.internet_gateway-rt",
            "module.dev_vpc.aws_route_table.public-rt",
            "module.dev_vpc.aws_subnet.public-sn",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305496103131:subnet/subnet-007cf815deeeec4a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/23",
            "id": "subnet-007cf815deeeec4a7",
            "map_public_ip_on_launch": false,
            "owner_id": "305496103131",
            "tags": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0329d21fe18e1637e"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305496103131:subnet/subnet-0543f3f2ddcb1804a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.0/23",
            "id": "subnet-0543f3f2ddcb1804a",
            "map_public_ip_on_launch": true,
            "owner_id": "305496103131",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0329d21fe18e1637e"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305496103131:vpc/vpc-0329d21fe18e1637e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/20",
            "default_network_acl_id": "acl-00a1513c8c0ba0783",
            "default_route_table_id": "rtb-023e7a0d24aac4b4a",
            "default_security_group_id": "sg-0c8f8ed1298142e73",
            "dhcp_options_id": "dopt-b9d08cc2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0329d21fe18e1637e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-023e7a0d24aac4b4a",
            "owner_id": "305496103131",
            "tags": {
              "Name": "custom-vpc"
            }
          }
        }
      ]
    }
  ]
}